<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sdp_16"
        android:layout_marginTop="@dimen/sdp_8"
        android:layout_marginEnd="@dimen/sdp_16"
        android:layout_marginBottom="@dimen/sdp_8"
        app:cardCornerRadius="@dimen/sdp_8"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/sdp_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/sdp_16" />

            <ImageView
                android:id="@+id/ivArticleImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sdp_144"
                android:contentDescription="@string/article_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image_grey_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvArticleTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sdp_8"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/article_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/ssp_20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/ivArticleImage" />

            <TextView
                android:id="@+id/tvArticleDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sdp_4"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/article_description"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/ssp_16"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvArticleTitle" />

            <TextView
                android:id="@+id/tvSourceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sdp_8"
                android:text="@string/source"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/ssp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvArticleDescription" />

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sdp_4"
                android:text="@string/source_not_available"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/ssp_16"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/tvSourceTitle"
                app:layout_constraintTop_toTopOf="@id/tvSourceTitle" />

            <TextView
                android:id="@+id/tvPublishedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sdp_8"
                android:layout_marginBottom="@dimen/sdp_16"
                android:text="@string/published_at"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/ssp_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvSourceTitle" />

            <TextView
                android:id="@+id/tvPublished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sdp_4"
                android:text="@string/publish_time_not_available"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/ssp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/tvPublishedTitle"
                app:layout_constraintTop_toTopOf="@id/tvPublishedTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>